@@ -16,8 +16,9 @@ from dectate import commit, autocommit
 from .app import App
 from .implicit import enable_implicit, disable_implicit
 from .core import (excview_tween_factory as EXCVIEW,
-                   model_predicate, name_predicate, request_method_predicate,
-                   body_model_predicate)
+    poisoned_host_header_protection_tween_factory as HOST_HEADER_PROTECTION,
+    model_predicate, name_predicate, request_method_predicate,
+    body_model_predicate)
 from .core import body_model_predicate as LAST_VIEW_PREDICATE
 from . import directive  # register directive methods
 from .generic import remember_identity, forget_identity, settings
