@@ -31,6 +31,10 @@ CHANGES
 - Introduce a deprecation warning for ``morepath.security`` and
   document how to deal with deprecations.
 
+- Adds host header validation to protect against header poisoning attacks.
+
+  See https://github.com/morepath/morepath/issues/271
+
 - Refactor internals of publishing/view engine. Reg is used more
   effectively for view lookup, order of some parameters is reversed
   for consistency with public APIs.
